# pocketsphinx-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
examples/: alignment.rs  commands.jsgf  file.rs  file_default.rs  file_jsgf.rs  live.rs  numbers.jsgf  parse_jsgf.rs  segments.rs
src/: alignment_iter.rs  config.rs  decoder.rs  endpointer.rs  fsg.rs  jsgf.rs  jsgf_rule_iter.rs  lib.rs  logmath.rs  nbest_iter.rs  ngram.rs  ngram_iter.rs  ngram_set_iter.rs  search_iter.rs  seg_iter.rs  vad.rs
sys/: Cargo.toml  build.rs  wrapper.h
